building the infrastructure

--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "linwj/crex24",
+    "name": "linwj/crex",
     "type": "library",
-    "description": "Crex24 API Like the official document interface, Support for arbitrary extension.",
+    "description": "Crex API Like the official document interface, Support for arbitrary extension.",
     "license": "MIT",
-    "keywords": ["crex24","bitmex", "binance", "okex", "huobi","kucoin","kumex"],
+    "keywords": ["crex","bitmex", "binance", "okex", "huobi","kucoin","kumex"],
     "authors": [
         {
             "name": "linwenjun",
@@ -12,7 +12,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Lin\\Crex24\\": "./src/"
+            "Lin\\Crex\\": "./src/"
         }
     },
     "require": {
